# ChangeLog for app-doc/devmanual
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/devmanual/ChangeLog,v 1.8 2013/03/29 00:01:12 hwoarang Exp $

  29 Mar 2013; Markos Chandras <hwoarang@gentoo.org>
  devmanual-0_pre20130309.ebuild, devmanual-9999.ebuild:
  export XDG_CONFIG_HOME to workaround sandbox problems. Bug #463380

*devmanual-0_pre20130309 (09 Mar 2013)

  09 Mar 2013; Markos Chandras <hwoarang@gentoo.org>
  +devmanual-0_pre20130309.ebuild, devmanual-9999.ebuild:
  Add snapshot ebuild per #460084

  26 Feb 2013; Markos Chandras <hwoarang@gentoo.org> devmanual-9999.ebuild:
  Typo

  14 Feb 2013; Pacho Ramos <pacho@gentoo.org> devmanual-9999.ebuild:
  Don't show elog messages always (#457596)

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org> devmanual-9999.ebuild:
  Move Creative Commons licenses to shorter names.

  22 Jan 2013; Markos Chandras <hwoarang@gentoo.org> devmanual-9999.ebuild:
  Add note about eclass documentation

  21 Jan 2013; Markos Chandras <hwoarang@gentoo.org> devmanual-9999.ebuild:
  Fix installation patch for html docs

*devmanual-9999 (19 Jan 2013)

  19 Jan 2013; Markos Chandras <hwoarang@gentoo.org> +devmanual-9999.ebuild,
  +metadata.xml:
  Add live ebuild for offline use of the Gentoo Development Guide. Bug #447170