@@ -2,26 +2,14 @@
 Hash: SHA256
 
 DIST devmanual-0_pre20130309.tar.gz 162701 SHA256 747419ccad7b2fdf8d0fd33b86ed2e13b19c94b45bf0bbaff2391bb91eecc774 SHA512 3c7fa563d5ee6bb61b9d70f3007e624ca30f417fc64c659f32a35dfe6814206532f5fc47fdd3f5662e6e0eb2e913f9d6e6a18e68221ecd07bab57025a1beee06 WHIRLPOOL a2a476aea4928cedb496071d6724ee899cb0a1c778eef94b73174d55de0c1fea78144776b1a25433c33163f07cc894dd197c80f00f3f289ee3d04aba7a07b58f
-EBUILD devmanual-0_pre20130309.ebuild 1696 SHA256 b1c27c039601504500be53e18bedbbfdc8186a722846b38f7133074859f38a59 SHA512 05c77419e896bfce0f0ba38fde0dfdf0a29a908e7cfd5fbec24e19c38f026de1478926a448000b4a27f2eef1133f8ce825a96b3bc1d54d8a5c0235147d54c0ba WHIRLPOOL 212e8b2874c788613a3d171f74c02215ab45c6a96d9b0fa66e2d3468cf6d19301f2d74d71e6199f58bba781bc8e22396dc5aad8330253adffebd96c895664199
+EBUILD devmanual-0_pre20130309.ebuild 1716 SHA256 856ceda665e230b48d53d92453bb30c0c4668adebcb2215fb3796adac19c3214 SHA512 5c557ac3ed1d5258d236d8694cd1f8fad88f8cd7aaa91ece98cfc00d52a1063adeec74d7628d86b53d032a2535978170cd714b324849bf525a4ee2b1e4ad0f8a WHIRLPOOL c0c7d646442c1f87cda0164382b6e23672e001ae4316ef69ffd78b52c0cb0a13ddc2530123fea7592a1c22eda78f849e1cbc602f57ad1e02eb7d89e2eb93ee02
 EBUILD devmanual-9999.ebuild 1615 SHA256 f69365584c872619616478b6be2d5be59e7042a269e3dc8b510b1d55a76277a6 SHA512 82ae3e57bd86040a1329392d8ea5f139afbf501ad070b99790622b771633c1eeab3310072277ffb3f8ffbe21cac919a9ef0c809a714a1642af5a0dfd0a40aa02 WHIRLPOOL ba07ba3ee38b480b29c31abf2b965d2871db1e633c369ee5d660094e73d154a90b25e0bee2f6c87c1ad3856af1766e534e2052041fc30ae0c3951e6a8315787b
-MISC ChangeLog 1330 SHA256 112c3fe87025a60663141b2c143553a29741f8bf7d37914bd3ea658d31391c17 SHA512 fc72846aaa0f8ad8861dd3153d5a4d08ecec8b2211fddc134d5f29d2b9accd32ae656ab61b0c0880d939599bbf34591b8cf363d99febdfc2771fbd3dbd6a14f9 WHIRLPOOL 5c5ee329996415a7d2eb61b9a809f498be84aa2252eb93488a92263aa1d05075710d2b953f9a7bd4dd312b1f6c9462cc2cadbb303f2518359d8434e9a81b8a3d
+MISC ChangeLog 1448 SHA256 0853e6807eccea3864b27b322d8d9b85f6d440271e83ded164922d19f3175fbf SHA512 632147bbebce714ed7f058e8058ca14bd9094d0ef501e8ca3eebf3b50a33a0bc09baa85172a14f7386714e30cc75fd23c93aba3ffb966a6e74855df242c4e8f0 WHIRLPOOL 28e3b4865e1331784786973df551769f566f280b423e3c8aec053ff3cad209713bba9ee707903879db6e0f2ce65d023b04ed0458e81df9c32d947f0ee9a0f64e
 MISC metadata.xml 337 SHA256 6af696a785d3cf67eb07799153dc920737ba679701ea55b119bf49dc4db08975 SHA512 f9f3bad85583b5d3bdc41697789d43df94ec9ea0156d8a9a9c9c68e041a4c12c87db20763fd913445bc5239d9a8b3e7f3a5aeec9b5c12c0e88a168522e488dcc WHIRLPOOL 98e49aa91b45a55d1aaa463afd533834b102f964ca42c88e3486a5adf54cb99fea1c214e2097325ed920e255f64d6f1f1ac6b462b3deb8e92ceb1540ae71b3f7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.21 (SunOS)
 
-iQJ8BAEBCABmBQJRVNnHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88KvAP/0jNl6ovY+Aue0UJICqnUJA4
-7wJWmTc8iiT+ycdK+fA2RKA0bzRJkX+yDStE1XSHNdCcuGTUNQ4syx7f6X1pmLYc
-rydWt8HmhrqW2dP7gFu3p/DgqLR6YO4jbINOLw9rIaHCO64l0JY5LbhDoc7V6251
-yOsuwp4FVlNsk6wEOjBx0VPg3YZmWtoxjNAZXgJeqJEOWLGUTma6s6btUH5EhRhK
-36JjZHccalnR/8gMCVaDw9RxZ8E3td6JqWc9gXHydPA2N941IHnIWaDXhMvGVSmv
-PrDY/52jJyfCXuiF/vqTbmJzTBF0BiXQfuXqRJdQS7/ywjRILpWqa37shhxRYn0e
-urig1LOWwFHxpT2ik84nYgRVMbHNGbx9gibV3SpgzD3Bd3JlvT8lHmXMCE/91lGZ
-FaCR/tN5+yFu9GaBLrfA6JqNSPkZNEmBSsykvCQk57yaaEhHjMZ32i76mFbBOgxb
-Wgkh0acXNKGjhIVtfX6KrcpUeDq1ySFPhWYY1H29Nqeshu0gWpcLGAR/ccmUD2v0
-5KWWzC8S31U3BdNNj+4AuBdvL8/2jNpNrTdC97dJ5eD4T5goQZu3hdnFbGSHZNjg
-GZVyooytKvUZFwnlLtJiwuW6x7Dk9t69/uglu2tFrT4fwqrhZtcC9YpLjxCLv4r9
-C3qCSyk9l4zkmO0VSnz8
-=S1DL
+iEYEAREIAAYFAlJkL8cACgkQX3X2B8XHTonZvQCeMertzm4K2BmP3YhCW8T6OBHF
+aSIAoIr2mNxXvzju6IKLCCGByVm69lWB
+=PEeM
 -----END PGP SIGNATURE-----
