@@ -11,16 +11,12 @@ EBUILD nm-applet-0.9.6.4-r1.ebuild 1473 SHA256 108807aed96b1ea28475035dd9f73aaf3
 EBUILD nm-applet-0.9.6.4.ebuild 1410 SHA256 6c50aefdc6754be70240fca4841aad950ad99255640260827256322c3168bbd8 SHA512 0c0b5b028a08e1be60268c0797a9da79c8ff42b17d8e314ab040572d2de321bb66747945ce9a47ab78f34afea4032abdee0d832d5d7fbc3801074d2a6604ce05 WHIRLPOOL f3050eff77f2f67104c827ebf224b9b58ff297aad36ee69eb318d81f3d6dab215b58fcc982dd3f928b68786164734f262acd3d584ef876b979e42240c74cf621
 EBUILD nm-applet-0.9.8.2.ebuild 1483 SHA256 8e409e4699622e4b2d10c451e2d8fce25e653fd958dee9f85b650e85d8115948 SHA512 20879b93e761a5670604ca867e3358ed36889c6d807942e637a4d319412d9749dddaa9ddf076be02591890645876e5586ae823bd69469ec6991624abca3616fb WHIRLPOOL 54643b8fac97108179e228b279a333c854fb1ae7baad89c8c5d62276e4f3c144c7ff12cfa3db4001bd718224aeaabd0b8feea7f1c3b6b99f286a9a95d8486090
 EBUILD nm-applet-0.9.8.4.ebuild 1654 SHA256 00a68e3b0dea70a416c89c341d290b0e51ebdef809006778708d6e77128b70c0 SHA512 85d97b0dbfed5be62bb19407fa6f8433b2d2d387ecd385768adb1fc1f19fd349cbd093673ddb4d0996b203a17acd6bfadf69c4b3dff5a9958319c8ea62f26562 WHIRLPOOL abe7ca13ee63365e63c8041da7b2915ae61085682fe16fc842681ee6d137e26b48b43dbeb8436ba2e1444dda1326d6eac71ca35198b7082b46baee46b547b57d
-MISC ChangeLog 18279 SHA256 0755ab98e64aa4a6069acf20aa43206888e42c3e83d3010eb348a3dde075788f SHA512 bef02e0b1c4f96146bed897746c0e79151395e16a01fd5d0c7a85e4ffc6fa04bf99a29a73d64703f21252eddd44baca41fa2f9a62f09fbe160e4ccb7aed5187f WHIRLPOOL e5dea206f252363349cd9a3221c9ae2c47e894ed17d43c4c60ecf1339502b80dbc53471808ec2e099aa191e3ecf39a77332686c02e4cab1b70cc2c79b48ad01d
-MISC metadata.xml 568 SHA256 287c10633139a1bb2c4a58faa5c77425442627db42ce65e7dc97596fe6a4dff9 SHA512 e23d8fdcfcda1c126cb074a28b13e2abcb45809d0a33302452c1d35bc55ae1d2d9725c9ae6e1fed39ba31b30b7bdd14b142b6a75d7f6a8eccf3ec17178c97a3a WHIRLPOOL 87f86d28d8de6d73b8d8c921b1efdf1811f604af85a2895af6b7b1d09d4f24424b51ca61a5c84df029afcfeeb07891b49da19092394da2df52de108e86bc1018
+MISC ChangeLog 18369 SHA256 1c990c81637b7e6d966edc0f30fa1f89fd1c3c475d7a6427eeb96c10faa38e1a SHA512 c9011aaf38077a2ad56898d9c3aa5e749620cbefa22212384d93e51032b27133023ff513076dc7ff8e74c5309839d17eb9cd54ee0127272f7c420ea8c6ec991f WHIRLPOOL 1955ae30876d1c9b5dbf3573ad811ed20f0284ab96adc9cf905ad370d0ba7137a8bbfef38ebaf5425001d5287d46c32204277d2f6762729fa17e3a57b47d79c1
+MISC metadata.xml 386 SHA256 11ac59c3d3e6aa7d2960358ccadc66df45e823c6cc88433a74810f03f39caec9 SHA512 6b9b209da423954b94a97de7d8e6f4d398d62e6527b3a387de1787da9fec77d5c9a71d52497598d6379df5a7427b736b1e7674a834120ebe88e8f1a2cac2c048 WHIRLPOOL 7158c5dc3f39b3586e289e28972dfa9cdccc6e8b34ebe8b0bdf02406535a7d46e2386ad934ce650ca3832ac5f388bfca6d9e37d76f88baf9cfedb99ae072f7d2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSNlfmAAoJEJ0WA1zPCt1h7ysIALugh8WFvp7OvPdaS6DWoImZ
-KAeYXfR7Sja8qOwOGPyRiU32mQFGqKfjnCoS/iy2eCNo1Uc6/uz/+auaBj6+bfRQ
-I+UL1jWoCjJmyHpMt4XRpWcakfX/6N7F9sQGcuvWhB/pOqobg0UEWVo02+WNUcjR
-6oAsZx+invsqg0qxp7pIMSAgpTASydHYvNmAdphUG6kwNxxUFFW8f6AbOtMdUYaS
-jdKFUkVnbUjfU8WWNukKsZeugKMBpuWd79rZK74lK8k8kH1YFSiY8qUIMDOhzonN
-JcMMW8gwTGgZTubV1dYNlbGLzPJXvpzcuLCLHpfQ6nSigtqets+PjIoaqfxrueg=
-=RWws
+iEYEAREIAAYFAlJkNV8ACgkQCaWpQKGI+9Sz6ACfSUAAuqdIIISjU4u/36ZVQd1q
+iioAnRnYxRm66+wLzmUmxHG+JzqP2X8n
+=dgbn
 -----END PGP SIGNATURE-----
