@@ -3,9 +3,9 @@ DEPEND=dev-libs/libxslt media-gfx/imagemagick[truetype]
 DESCRIPTION=The Gentoo Development Guide
 EAPI=5
 HOMEPAGE=http://devmanual.gentoo.org/
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x64-macos
 LICENSE=CC-BY-SA-2.0
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~hwoarang/distfiles/devmanual-0_pre20130309.tar.gz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=cab3f69dfdc5d745e73fbba4204d193f
+_md5_=84355c6851f9b54d36feebf17be88b87
