@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/nm-applet
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nm-applet/ChangeLog,v 1.105 2013/09/16 00:59:20 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nm-applet/ChangeLog,v 1.106 2013/10/20 19:56:14 pacho Exp $
+
+  20 Oct 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  gnome herd is maintaining this
 
 *nm-applet-0.9.8.4 (16 Sep 2013)
 
