@@ -1,6 +1,10 @@
 # ChangeLog for app-doc/devmanual
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/devmanual/ChangeLog,v 1.8 2013/03/29 00:01:12 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/devmanual/ChangeLog,v 1.9 2013/10/20 19:32:21 grobian Exp $
+
+  20 Oct 2013; Fabian Groffen <grobian@gentoo.org>
+  devmanual-0_pre20130309.ebuild:
+  Marked ~x64-macos, bug #486818
 
   29 Mar 2013; Markos Chandras <hwoarang@gentoo.org>
   devmanual-0_pre20130309.ebuild, devmanual-9999.ebuild:
